chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "argvex",
   "description": "Lightweight and unopinionated CLI argument parser — just a parsing tool, not a framework",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "bin": {
@@ -14,10 +14,12 @@
     "prepack": "npm run build",
     "test": "vitest --no-watch"
   },
+  "dependencies": {
+    "tslib": "^2.6.3"
+  },
   "devDependencies": {
     "@types/node": "^22.4.0",
     "ts-patch": "^3.2.1",
-    "tslib": "^2.6.3",
     "typescript": "^5.5.4",
     "typescript-transform-paths": "^3.4.11",
     "vitest": "^3.2.4"
